<resources>
    <string name="custom_res_shutter_pressed">camera_shutter_btn_pressed</string>
    <string name="custom_res_stop_shutter_pressed">camera_stop_btn_pressed</string>
    <string name="custom_res_mainbar_btn_background">camera_main_bar_selector</string>
    <string name="custom_res_mainbar_btn_pressed">camera_photo_bar_btn_pressed</string>
    <string name="custom_res_effect_item_background">effect_item_background_selector</string>
    <string name="custom_res_effect_item_selected">photo_preset_frame_selected</string>
    <string name="custom_res_action_btn_background1">common_b_button</string>
    <string name="custom_res_action_btn_background2">common_b_button</string>
    <string name="custom_res_action_btn_background3">common_b_button</string>
    <string name="custom_res_action_btn_background4">common_b_button</string>
    <string name="custom_res_request_btn_background">common_b_button</string>
    <string name="custom_res_tumbler">tumbler_level_current</string>
    <string name="custom_res_submenu_handle_press">camera_submenu_bar_pressed</string>
    <string name="custom_res_submenu_handle_open_press">camera_submenu_bar_open_pressed</string>
    <string name="custom_res_menu_bar_press">camera_menu_bar_pressed</string>
    <string name="custom_res_menu_bar_open_press">camera_menu_bar_open_pressed</string>
    <string name="custom_res_cameraflip_btn_background">icon_camera_flip_selector</string>
    <string name="custom_res_onscreen_camera_switch_btn">common_b_button_small</string>
    <string name="custom_res_common_mail_checkbox">common_mail_checkbox</string>
    <string name="custom_res_common_sub_panel_navbar">common_sub_panel_navbar</string>
    <string name="custom_res_common_b_button">common_b_button</string>
    <string name="custom_res_common_b_button_selected">common_b_button_selected</string>
    <string name="custom_res_common_footer_btn">common_titlebar_btn</string>
    <string name="custom_res_common_footer_btn_selected">common_titlebar_btn_selected</string>
    <string name="custom_res_camera_switch_btn">camera_switch_btn</string>
    <string name="custom_res_effect_panel_button_selector">camera_effect_panel_button_selector</string>
    <string name="custom_res_photo_frame_pressed">camera_photo_frame_pressed</string>
    <string name="custom_res_gallery_button_selector">camera_gallery_button_selector</string>
    <string name="custom_res_review_btn_pressed">camera_review_menu_bar_pressed</string>
    <string name="custom_res_review_btn_selector">camera_review_btn_selector</string>
    <string name="custom_res_back_to_camera_btn_pressed">camera_btn_back_camera_pressed</string>
    <string name="custom_res_back_to_camcorder_btn_pressed">camera_btn_back_video_pressed</string>
    <string name="custom_res_common_radio_on">common_radiobutton_on</string>
    <string name="custom_res_common_radio_selected">common_radiobutton_selected</string>
    <string name="custom_res_common_radio_off">common_radiobutton_off</string>
    <string name="custom_res_common_radio_off_selected">common_radiobutton_off_selected</string>
    <string name="custom_res_title_background">common_titlebar_sublevel</string>
    <string name="custom_res_mirror_light_bottom_bar">mirror_light_bottom_bar</string>
    <string name="custom_res_mirror_dark_bottom_bar">mirror_dark_bottom_bar</string>
    <string name="custom_res_mirror_bright_icon">bright_mirror_icon</string>
    <string name="custom_res_mirror_dark_icon">dark_mirror_icon</string>
    <string name="custom_res_scene_frame_pressed">scene_frame_pressed</string>
    <string name="camera_demo_video">http://m.youtube.com/watch?v=f3PGC4bQYIs</string>
    <string name="custom_res_snapbooth_shutter_btn_background_pressed">snapbooth_shutter_btn_pressed</string>
    <string name="custom_res_snapbooth_cancel_btn_background_pressed">cancel_btn_pressed</string>
    <string name="custom_res_snapbooth_effect_item_background_pressed">snapbooth_effect_press</string>
    <string name="custom_res_snapbooth_effect_item_focus">snapbooth_effect_focus</string>
    <string name="custom_res_snapbooth_gallery_btn_background_pressed">snapbooth_gallery_press</string>
    <string name="custom_res_snapbooth_switch_btn_background_pressed">snapbooth_effect_toggle_press</string>
    <string name="custom_res_snapbooth_review_btn_background_pressed">snapbooth_review_press</string>
    <string name="htc_private_app">@com.htc:string/nn_camera</string>
    <string name="camcorder_name">Camcorder</string>
    <string name="snapbooth_name">Snapbooth</string>
    <string name="mirror_name">Mirror</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="no_storage_camcorder">Please insert an SD card before using the camcorder.</string>
    <string name="not_write_storage">Unable to save file to SD card due to insufficient file permissions.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="not_enough_phone_storage">Your phone storage is full.</string>
    <string name="mass_storage_camera">Camera is unavailable because SD card is mounted to a PC. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_camcorder">Camcorder is unavailable because SD card is mounted to a PC. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_phone_camera">Camera is unavailable because your phone is being used as USB storage. Disconnect USB cable to proceed.</string>
    <string name="mass_storage_phone_camcorder">Camcorder is unavailable because your phone is being used as USB storage. Disconnect USB cable to proceed.</string>
    <string name="flash_disable_hint">Flash is disabled due to low battery power, cold weather, or a running application that uses a lot of power, like Wi-Fi hotspot and phone.</string>
    <string name="flash_disable_hint_battery_power">Unable to use flash because your battery level is too low.</string>
    <string name="flash_disable_hint_cold_weather">Unable to use flash due to cold weather.</string>
    <string name="flash_disable_hint_phone_call">Unable to use flash because a phone call is in progress.</string>
    <string name="flash_disable_hint_hotspot">Unable to use flash because the Wi-Fi hotspot feature is in use.</string>
    <string name="mass_storage_fs_max_file_reach">Video size limit reached</string>
    <string name="how_to_start_panorama">Press the capture button to start panorama</string>
    <string name="how_to_start_panorama_ds">Press capture button and pan</string>
    <string name="panorama_start_panning_left_right">Pan left or right slowly to continue</string>
    <string name="panorama_start_panning_up_down">Pan up or down slowly to continue</string>
    <string name="panorama_hold">Hold</string>
    <string name="panorama_stitching_images">Stitching photos...</string>
    <string name="panorama_stitching_error_images">Oops, please pan the camera smoothly and try again. Stitching current photos...</string>
    <string name="processing_image">@com.htc:string/st_processing</string>
    <string name="saving_photos">Saving photos...</string>
    <string name="saving_video">Saving video...</string>
    <string name="optimal_3D_in_landscape">Please hold the phone horizontally for 3D capture to function properly.</string>
    <string name="image_queue_is_full">Saving photos, please take picture later.</string>
    <string name="how_to_start_group_portrait">Use the Group scene to capture that perfect shot with all smiles and no blinking</string>
    <string name="group_portrait_processing_images">Scanning faces to compose the best shot...</string>
    <string name="auto_upload_first_time_dialog">Would you like to auto backup your camera shots to Facebook?</string>
    <string name="auto_upload_confirm_dialog">You can change this setting anytime from Settings-->Auto Upload</string>
    <string name="other_usage_camera">Unable to launch the camera because it is in use by another application.</string>
    <string name="other_usage_camcorder">Unable to launch the camcorder because it is in use by another application.</string>
    <string name="other_usage_camera_close_other">Another application is using the camera. Please terminate application and try to start camera again.</string>
    <string name="mem_low_cloase_camera">Please terminate unnecessary applications and try to start camera again.</string>
    <string name="camera_hw_open_fail">Camera hardware failed to launch. Please try again.</string>
    <string name="not_recording_when_streaming_tv">Video recording does not work when streaming to TV</string>
    <string name="forbidden_camera">Camera access is forbidden by device administrator, please contact IT team for assistance.</string>
    <string name="not_launch_camera_while_phonecall_and_lowpower">You cannot use the camera because a phone call is ongoing while the battery is low.</string>
    <string name="close_camera_while_phonecall_and_lowpower">The camera is closed because a phone call is ongoing while the battery is low</string>
    <string name="unable_launch_camera">Unable to start the camera.</string>
    <string name="close_camera_while_error_happened">The camera needs to close.</string>
    <string name="smart_scene_to_normal_scene">Current scene has been changed to Normal scene.</string>
    <string name="on_screen_btn_effects">Effects</string>
    <string name="on_screen_btn_gallery">@com.htc:string/nn_gallery</string>
    <string name="on_screen_btn_enhance_photo">Enhance</string>
    <string name="on_screen_btn_trim_video">Trim</string>
    <string name="dialog_button_delete">@com.htc:string/va_delete</string>
    <string name="auto">@com.htc:string/st_auto</string>
    <string name="on_capital">@com.htc:string/st_on</string>
    <string name="off_capital">@com.htc:string/st_off</string>
    <string name="time_2_seconds">2 seconds</string>
    <string name="time_3_seconds">3 seconds</string>
    <string name="time_5_seconds">5 seconds</string>
    <string name="time_10_seconds">10 seconds</string>
    <string name="no_limit">No limit</string>
    <string name="capture_bar_recording">REC</string>
    <string name="resolution">Resolution</string>
    <string name="video_quality">Video quality</string>
    <string name="white_balance">White balance</string>
    <string name="self_timer">Self-timer</string>
    <string name="effect">Effect</string>
    <string name="image_adjustments_custom">@com.htc:string/st_custom</string>
    <string name="image_adjustments_default">@com.htc:string/st_default</string>
    <string name="scene">Scenes</string>
    <string name="auto_capture">Auto capture</string>
    <string name="one_face">1 face</string>
    <string name="two_faces">2 faces</string>
    <string name="auto_capture_timer">Timer</string>
    <string name="settings_mode_slow_motion">Slow motion video</string>
    <string name="settings_capture_mode_normal">Normal</string>
    <string name="settings_capture_mode_hd60fps">HD@60fps</string>
    <string name="property_level_p2">+2</string>
    <string name="property_level_p1">+1</string>
    <string name="property_level_0">0</string>
    <string name="property_level_m1">-1</string>
    <string name="property_level_m2">-2</string>
    <string name="snapbooth_review_screen_btn_share">@com.htc:string/va_share</string>
    <string name="snapbooth_review_screen_btn_delete">@com.htc:string/va_delete</string>
    <string name="snapbooth_service_review_btn_redo">Retake</string>
    <string name="main_bar_settings_description">@com.htc:string/st_more</string>
    <string name="main_bar_flash_description">Flash</string>
    <string name="main_bar_switch_description">Mode</string>
    <string name="property_level_p4">+4</string>
    <string name="property_level_p3">+3</string>
    <string name="property_level_m3">-3</string>
    <string name="property_level_m4">-4</string>
</resources>