<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/item_main_bar" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0">
            <com.htc.widget.HtcIconButton android:id="@id/view_settings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/main_bar_settings_description" android:layout_centerInParent="true" style="@style/text_style_main_bar_button_text" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0">
            <com.htc.widget.HtcIconButton android:id="@id/view_flash" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/main_bar_flash_description" android:layout_centerInParent="true" style="@style/text_style_main_bar_button_text" />
        </RelativeLayout>
        <View android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0">
            <com.htc.widget.HtcIconButton android:id="@id/view_scene_quality" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true" style="@style/text_style_main_bar_button_text" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0">
            <com.htc.widget.HtcIconButton android:id="@id/icon_camera_switch" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/main_bar_switch_description" android:layout_centerInParent="true" style="@style/text_style_main_bar_button_text" />
        </RelativeLayout>
        <RelativeLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/mainbar_item_height" android:layout_weight="1.0">
            <com.htc.widget.HtcIconButton android:id="@id/view_mode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/main_bar_switch_description" android:layout_centerInParent="true" style="@style/text_style_main_bar_button_text" />
        </RelativeLayout>
        <View android:id="@id/icon_camera_swap" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@id/receiver_main_bar" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="@dimen/handle_height" android:layout_alignParentBottom="true">
        <View android:id="@id/receiver_photo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_effect" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_settings" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_flash" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_capture" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_scene_quality" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_camera_switch" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_mode" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <View android:id="@id/receiver_camera_swap" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>
